Removed deprecations.
Removed deprecated API and usasage of deprecated API.

Closes #1340